Fixed nowrap for buttons

--- a/src/btn.css
+++ b/src/btn.css
@@ -1,23 +1,23 @@
 .btn 
 {
-      border-radius: 5px;
-      padding: 15px 25px;
-      font-size: 30px;
-      text-decoration: none;
-      margin: 10px;
-      color: #fff;
-      position: relative;
-      display: inline-block;
-      cursor: pointer;
-      user-select: none;
-      -moz-user-select: none;
+    border-radius: 5px;
+    padding: 15px 25px;
+    font-size: 30px;
+    text-decoration: none;
+    margin: 10px;
+    color: #fff;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    white-space: nowrap;
+    user-select: none;
+    -moz-user-select: none;
 }
 
 .btn:active
 {
-      transform: translate(0px, 5px);
-      -webkit-transform: translate(0px, 5px);
-      box-shadow: 0 1px 0 0;
+    transform: translate(0px, 5px);
+    box-shadow: 0 1px 0 0;
 }
 
 .btn_red 
@@ -59,7 +59,6 @@
 
 .btn_disabled:active
 {
-      transform: none;
-      -webkit-transform: none;
-      box-shadow: 0 5px 0 0 #c6c6c6;
+    transform: none;
+    box-shadow: 0 5px 0 0 #c6c6c6;
 }
